Fix text overflow and set max height for TextDisplay component; Parse new lines in TextDisplay and set font size; Style DateDisplay/author component

--- a/src/components/Display/DateDisplay/DateDisplay.module.css
+++ b/src/components/Display/DateDisplay/DateDisplay.module.css
@@ -1,4 +1,9 @@
 .DateDisplay {
+  font-size: 0.8em;
   margin: 15px 0;
   text-align: left;
+}
+
+.author {
+  font-weight: 700;
 }
