--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -1,3 +1,3 @@
 .Display {
-  margin: 0 5%;
+  margin: 0 7% 25% 7%;
 }
